<resources>
    <string name="app_name">Baseapp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_icon_description">BaseApp Icon</string>
    <string name="default_user_name">UserName</string>
    <string name="default_user_email">james.coggan@gmail.com</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_home">Home</string>
    <string name="home_dialog_time_title">Select a time</string>
    <string name="default_clock_value">00h 00m 00s</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="spacer">Spacer</string>
    <string name="description_backspace">Backspace</string>
</resources>
